# odylith

./: .gitignore  .mailmap  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_ATTRIBUTION.md  pyproject.toml
.claude/: CLAUDE.md  settings.json  statusline.sh
.claude/agents/: odylith-compass-briefer.md  odylith-compass-narrator.md  odylith-registry-scribe.md  odylith-reviewer.md  odylith-validator.md  odylith-workstream.md
.claude/commands/: odylith-atlas-auto-update.md  odylith-compass-refresh-wait.md  odylith-compatibility.md  odylith-context.md  odylith-discipline.md  odylith-doctor.md  odylith-guidance-behavior.md  odylith-handoff.md  odylith-plan.md  odylith-query.md  odylith-start.md  odylith-sync-governance.md  odylith-workstream-new.md  odylith-worktree.md
.codex/: config.toml
.githooks/: _identity_guard.sh  pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
docs/: ADVANCED_OPERATOR_USE_CASES.md  CONTEXT_ENGINE.md  EXECUTION_ENGINE.md  LICENSE_AND_ATTRIBUTION.md  OPERATOR_INSTRUCTIONS.md  STARTER_PROMPT_INSPIRATIONS.md  STATUS_AND_DISCLOSURES.md  WHY_ODYLITH_CHANGES_OUTCOMES.md
odylith/: AGENTS.md  FAQ.md  INSTALL.md  INSTALL_AND_UPGRADE_RUNBOOK.md  MAINTAINER_RELEASE_RUNBOOK.md  OPERATING_MODEL.md  PRODUCT_COMPONENTS.md  README.md  SECURITY_POSTURE.md  index.html  tooling-app.v1.js  tooling-payload.v1.js
scripts/: audit_third_party_licenses.py  release_semver.py  release_version_session.py  release_worktree.py  show_release_version_state.py  sync_version_truth.py  validate_git_identity.py  watch_benchmark_progress.sh
tests/: __init__.py  _stable_tmp_path.py
(+1651 files in other folders)
