[project]
name = "odylith"
version = "0.1.8"
description = "Odylith public product"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "freedom-research" },
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx[http2]>=0.27,<1.0",
  "Jinja2>=3.1,<4.0",
  "sigstore>=3.6,<4.0",
]

[project.optional-dependencies]
context-engine-memory = [
  "lancedb==0.30.0",
  "tantivy>=0.25.1,<0.26.0",
]
watchers = [
  "watchdog>=6.0,<7.0; platform_system == 'Darwin'",
]

[project.scripts]
odylith = "odylith.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odylith"]
include = [
  "LICENSE",
  "NOTICE",
  "THIRD_PARTY_ATTRIBUTION.md",
  "src/odylith/bundle/assets/**",
  "src/odylith/runtime/memory/assets/**",
  "src/odylith/runtime/surfaces/assets/**",
  "src/odylith/runtime/surfaces/templates/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "NOTICE",
  "THIRD_PARTY_ATTRIBUTION.md",
  "src/**",
  "tests/**",
  "docs/**",
  "scripts/**",
  "README.md",
]

[tool.hatch.envs.default]
type = "virtual"
python = "3.13"
path = ".venv"
features = ["context-engine-memory", "watchers"]
dependencies = [
  "hatch>=1.14,<2.0",
  "numpy==2.4.3",
  "playwright>=1.53,<2.0",
  "Pygments==2.19.2",
  "pytest>=8.2,<9.0",
  "requests==2.33.0",
  "sigstore>=3.6,<4.0",
]
